collection player added in node_ajax_content

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -57,7 +57,7 @@
     <div class="row gmodal-body">
         <div class="small-8 columns gmodal-item-panel">
             <!-- Detail view section -->
-            {% include 'ndf/node_ajax_content.html' with no_discussion=True %}
+            {% include 'ndf/node_ajax_content.html' with no_discussion=True is_course=True %}
 
         </div>
             {% comment %}
