New site variable for displaying My Dashboard in header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -181,6 +181,14 @@
 
         <!-- Current group selector -->
         {% if user.is_authenticated %}
+            {% if site.MY_DASHBOARD_IN_HEADER %}
+            <li>
+              <a title="My Dashboard" class="{%if title == 'My Dashboard'%}active{%endif%}" href="{% url 'my_dashboard' request.user.id %}">
+                {% trans 'MY DASHBOARD' %}
+              </a>
+            </li>
+            {% endif %}
+
           
           {% if site.MY_COURSES_IN_HEADER %}
             <li>
@@ -192,7 +200,7 @@
                   
           {% if site.MY_GROUPS_IN_HEADER %}
             <li>
-              <a title="" class="{%if title == 'My Groups'%}active{%endif%}" href="{% url 'my_groups' request.user.username %}">
+              <a title="{{title}}" class="{%if title == 'My Groups'%}active{%endif%}" href="{% url 'my_groups' request.user.username %}">
                 {% trans 'MY GROUPS' %}
               </a>
             </li>
