--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
@@ -4,8 +4,7 @@
 <footer>
   <section class="row">
     <div class="medium-12 columns ">
-      <ul class="inline-list" style="margin:5px;
-    margin-left: 25%;">
+      <ul class="inline-list" style="margin:0px;">
         <li><a href="{{site.ABOUT}}">{% trans "About" %}</a></li>
         <li><a href="{{site.PARTNERS}}">{% trans "Partners" %}</a></li>
         <li><a href="{{site.GROUPS}}">{% trans "Groups" %}</a></li>
@@ -17,25 +16,26 @@
         <!--
         <li><a href="https://gitlab.com/gnowledge/gstudio/issues">{% trans "Issues" %}</a></li>
         -->
-        <li><a href="{{site.ISSUES_PAGE}}">{% trans "Feedback" %}</a></li> 
+        <li><a href="{{site.ISSUES_PAGE}}">{% trans "Feedback" %}</a></li>
 
-      </ul>   
+      </ul>
     </div>
   </section>
+  <div class="row">
+    <!--div class="medium-2 columns" style="margin-top: -0.9cm">
+      <p>
+        <a href="{{site.GIT_REPO}}">{% trans "View Source Code" %}</a><br>
 
-  <div class="medium-2 columns" style="margin-top: -0.9cm">
-    <p>
-      <a href="{{site.GIT_REPO}}">{% trans "View Source Code" %}</a><br>
+        <a class="show-span-on-hover" rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="http://creativecommons.org/licenses/by-sa/3.0/">
+          <img src="/static/ndf/images/cc-by-sa.png" alt="Creative Commons License" title="All material is licensed under a Creative Commons Attribution-Share Alike 3.0 Unported License unless mentioned otherwise." style="border-width:0" src="/static/ndf/images/cc-by-sa.png"/>
+        </a>
+      </p>
+    </div-->
 
-      <a class="show-span-on-hover" rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/" title="http://creativecommons.org/licenses/by-sa/3.0/">
-        <img src="/static/ndf/images/cc-by-sa.png" alt="Creative Commons License" title="All material is licensed under a Creative Commons Attribution-Share Alike 3.0 Unported License unless mentioned otherwise." style="border-width:0" src="/static/ndf/images/cc-by-sa.png"/>
-      </a>
-    </p>
-  </div>
-
-  <div class="medium-10 columns">
-  {% get_latest_git_hash as git_commit_hash %}
-    <strong style="margin-left:2%;margin:70px;">{% trans "Powered by" %} <a href="https://gitlab.com/gnowledge/gstudio/tree/{{git_commit_hash}}" target="_blank">{% trans "gstudio" %} </a> {% trans "built at Gnowledge Lab" %}, <a href="http://www.hbcse.tifr.res.in/" target="_blank">{% trans "Homi Bhabha Centre for Science Education" %}</a>, <a href="http://www.tifr.res.in/" target="_blank">{% trans "TIFR" %}</a>.</strong>
-    {# <!--{{site.ORG_NAME |safe }}--> #}
+    <div class="medium-12 columns footer-meta">
+    {% get_latest_git_hash as git_commit_hash %}
+      <strong >{% trans "Powered by" %} <a href="https://gitlab.com/gnowledge/gstudio/tree/{{git_commit_hash}}" target="_blank">{% trans "gstudio" %} </a> {% trans "built at Gnowledge Lab" %}, <a href="http://www.hbcse.tifr.res.in/" target="_blank">{% trans "Homi Bhabha Centre for Science Education" %}</a>, <a href="http://www.tifr.res.in/" target="_blank">{% trans "TIFR" %}</a>.</strong>
+      {# <!--{{site.ORG_NAME |safe }}--> #}
+    </div>
   </div>
 </footer>
