Commented rating parts static data in course overview

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
@@ -79,20 +79,24 @@
                 <span class="course-metric-heading">Comments By me</span>
                 <span class="course-metric-count total_cmnts_by_user"></span>
               </div>
+              {% comment %}
               <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Avg Rating for my comments</span>
                 <span class="course-metric-count">Star rating</span>
               </div>
+              {% endcomment %}
             </div>
             <div class="row">
               <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Comments for me</span>
-                <span class="course-metric-count">0</span>
+                <span class="course-metric-count cmnts_rcvd_by_user">0</span>
               </div>
+              {% comment %}
               <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Avg Ratings to others</span>
                 <span class="course-metric-count">Star Rating</span>
               </div>
+              {% endcomment %}
             </div>
           </div>
           <div class="course-gallery-uploads course-section">
@@ -114,12 +118,14 @@
                 <span class="course-metric-count cmts_on_user_files"></span>
               </div>
             </div>
+            {% comment %}
             <div class="row">
               <div class="columns small-12">
                 <span class="course-metric-heading">Avg. Rating</span>
                 <span class="course-metric-count">Star Rating</span>
               </div>
             </div>
+            {% endcomment %}
             <div class="row">
               <div class="columns small-12 medium-4">
                 <span class="course-metric-heading">Others File Visited</span>
@@ -134,12 +140,14 @@
                 <span class="course-metric-count unique_users_commented_on_user_files"></span>
               </div>
             </div>
+            {% comment %}
             <div class="row">
               <div class="columns small-12">
                 <span class="course-metric-heading">Avg. Rating Awarded</span>
                 <span class="course-metric-count">Star Rating</span>
               </div>
             </div>
+            {% endcomment %}
           </div>
           <div class="course-quiz-perf course-section">
             <span class="course-section-heading">Quiz Performance</span>
