--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -87,12 +87,13 @@
                         </div>
                         <a class="file-detail-modal-close close-reveal-modal" aria-label="Close">&#215;</a>
                     </div>
+                    {% get_node_ratings request node.pk as ratings %}
                     <div class="row image-brief">
                         <div class="small-12 columns">
                             <i class="fi-eye"></i>
                             <span class="viewed-count">214 Views</span>
                             <span>Avg&nbsp;</span>
-                            <span class="image-rating">3.4</span>
+                            <span class="image-rating">{{ratings.avg}}</span>
                             <span>Rate this</span>
                             <span>
                                 {% include "ndf/rating.html" %}
