--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/login_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/login_clix.html
@@ -45,7 +45,7 @@
 					<div class="row">
 						<div class="small-12 columns end">
 							<label class="left">
-								Username or {{ form.username.label }}
+								{{ form.username.label }} or E-mail 
 							</label>
 						</div>
 					</div>
