scroll bar removed and two sections merged in unit player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -3494,7 +3494,7 @@ $course-envelop-color: #fff;
   }
   .activity-slides-container {
     border: 1px solid black;
-    height: 600px;
+    height: 100%;
     background: #CCCCCC;
     margin-bottom: 2em;
     padding: 0em 1em;
