--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -93,10 +93,10 @@
               </div>
           </div>
       </div>
-      <div class="activity-slides-container row" style=" height:750px;">
+      <div class="activity-slides-container row" >
           {% get_relation_value node.pk 'has_help' as grel_dict %}
           <div class="columns small-12 activity-slides">
-              <div class="row activity-slide node_details" style="overflow-y:auto;">
+              <div class="row activity-slide node_details" >
                   {% if grel_dict.cursor and grel_dict.grel_node.count %}
                     <a id="related-content-button" href="#related-content" class="view-related-content"><i class="fa fa-arrow-circle-down"></i>&nbsp;View related contents</a>
                   {% endif %}
@@ -123,19 +123,19 @@
               {% endfor %}
               {% endif %}
 
-          </div>
-      </div>
-      <div class="row activity-comments-section">
-          <div class="columns small-12 " id="view-discussion">
-                <!-- discussion content area -->
-                {% get_thread_node node.pk as thread_node %}
-                {% if thread_node %}
-                    {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
-                    {% get_node thread_node as thread_node_obj %}
-                    {% include 'ndf/gin-line-texteditor.html' with node=thread_node_obj var_name="content_org" allow_to_comment=True thread_node_exists=True %}
-                {% endif %}
+              <div class="row activity-comments-section">
+                  <div class="columns small-12 " id="view-discussion">
+                        <!-- discussion content area -->
+                        {% get_thread_node node.pk as thread_node %}
+                        {% if thread_node %}
+                            {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
+                            {% get_node thread_node as thread_node_obj %}
+                            {% include 'ndf/gin-line-texteditor.html' with node=thread_node_obj var_name="content_org" allow_to_comment=True thread_node_exists=True %}
+                        {% endif %}
 
-                <!-- END of discussion content area -->
+                        <!-- END of discussion content area -->
+                  </div>
+              </div>
           </div>
       </div>
           {% comment %}
