max height set for notifications area in analytics

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
@@ -50,7 +50,7 @@
               {% endcomment %}
             </ul>
             <div class="tabs-content">
-              <section role="tabpanel" aria-hidden="false" class="content active" id="course-notification" style="overflow-y:scroll;height:300px;">
+              <section role="tabpanel" aria-hidden="false" class="content active" id="course-notification" style="overflow-y:scroll;max-height:300px;">
               </section>
               <section role="tabpanel" aria-hidden="true" class="content" id="course-act-logs">
                 <ul>
