--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
@@ -1,10 +1,43 @@
 {% block head %}
   <script src="/static/ndf/bower_components/pace/pace.js"></script>
   <link href="/static/ndf/bower_components/pace/themes/blue/pace-theme-loading-bar.css" rel="stylesheet" />
+<style type="text/css">
+  
+  .rating-stars {
+    background-image:url("/static/ndf/images/stars.png");
+    height: 15px;
+    display: none;
+  }
+</style>
 {% endblock %}
+
 <script src="/static/ndf/bower_components/d3/d3.js"></script>
 
 <div id="course-about">
+<div class="row">
+<div class="small-12 columns about-course">
+  <h5>About</h5>
+  <div class="row">
+    <div class="small-12 medium-8 columns">
+    {{group_object.content|safe}}
+    </div>
+    <div class="small-12 medium-4 columns">
+      <div class="course-highlight">
+        <i class="fa fa-list"></i>
+        <span>{{group_object.collection_set|length}}</span>
+      </div>
+      <div class="course-highlight">
+        <i class="fa fa-clock-o"></i>
+        <span>{{weeks_count}} weeks</span>
+      </div>
+      <div class="course-highlight">
+        <i class="fa fa-user"></i>
+        <span>{{group_object.author_set|length}} students enrolled</span>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 {% if request.user.is_authenticated %}
 
 <div class="pre-analytics-msg-div text-center">
@@ -82,7 +115,12 @@
               {% comment %}
               <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Avg Rating for my comments</span>
-                <span class="course-metric-count">Star rating</span>
+                <span class="course-metric-count">
+                  <div class="row avg_rating_for_my_cmnts">
+                    <div class="columns small-6 medium-6 rating-stars"></div>
+                    <div class="columns small-6 medium-6 rating_lbl left"></div>
+                  </div>
+                </span>
               </div>
               {% endcomment %}
             </div>
@@ -94,7 +132,13 @@
               {% comment %}
               <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Avg Ratings to others</span>
-                <span class="course-metric-count">Star Rating</span>
+                <span class="course-metric-count">
+                  <div class="row avg_rating_to_othr_cmnts_by_me">
+                    <div class="columns small-6 medium-6 rating-stars"></div>
+                    <div class="columns small-6 medium-6 rating_lbl left"></div>
+                  </div>
+                  
+                </span>
               </div>
               {% endcomment %}
             </div>
@@ -122,7 +166,9 @@
             <div class="row">
               <div class="columns small-12">
                 <span class="course-metric-heading">Avg. Rating</span>
-                <span class="course-metric-count">Star Rating</span>
+                <span class="course-metric-count">
+                  <div class="rating-stars"></div>
+                </span>
               </div>
             </div>
             {% endcomment %}
@@ -140,14 +186,17 @@
                 <span class="course-metric-count unique_users_commented_on_user_files"></span>
               </div>
             </div>
-            {% comment %}
             <div class="row">
               <div class="columns small-12">
                 <span class="course-metric-heading">Avg. Rating Awarded</span>
-                <span class="course-metric-count">Star Rating</span>
+                <span class="course-metric-count">
+                  <div class="row total_rating_rcvd_on_files">
+                    <div class="columns small-6 medium-6 rating-stars"></div>
+                    <div class="columns small-6 medium-6 rating_lbl left"></div>
+                  </div>
+                </span>
               </div>
             </div>
-            {% endcomment %}
           </div>
           <div class="course-quiz-perf course-section">
             <span class="course-section-heading">Quiz Performance</span>
@@ -191,9 +240,18 @@
               </div>
             </div>
             <div class="row">
-              <div class="columns small-12 medium-12">
+              <div class="columns small-12 medium-6">
                 <span class="course-metric-heading">Others notes visited</span>
                 <span class="course-metric-count total_notes_read_by_user"></span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Avg. Rating Awarded</span>
+                <span class="course-metric-count">
+                  <div class="row total_rating_rcvd_on_notes">
+                    <div class="columns small-6 medium-6 rating-stars"></div>
+                    <div class="columns small-6 medium-6 rating_lbl left"></div>
+                  </div>
+                </span>
               </div>
             </div>
           </div>
@@ -212,30 +270,6 @@
 </div>
 
 
-              <div class="row">
-                <div class="small-12 columns about-course">
-                  <h5>About</h5>
-                  <div class="row">
-                    <div class="small-12 medium-8 columns">
-                    {{group_object.content|safe}}
-                    </div>
-                    <div class="small-12 medium-4 columns">
-                      <div class="course-highlight">
-                        <i class="fa fa-list"></i>
-                        <span>{{group_object.collection_set|length}}</span>
-                      </div>
-                      <div class="course-highlight">
-                        <i class="fa fa-clock-o"></i>
-                        <span>{{weeks_count}} weeks</span>
-                      </div>
-                      <div class="course-highlight">
-                        <i class="fa fa-user"></i>
-                        <span>{{group_object.author_set|length}} students enrolled</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
               {% comment %}
               <div class="row course-students-data">
                 <div class="small-12 medium-4 columns">
@@ -300,6 +334,12 @@
                         $("."+i)
                             .css("width",val+"%")
                     }
+                    else if(i == "total_rating_rcvd_on_files" || i == "total_rating_rcvd_on_notes"){
+                        $("."+i +" .rating-stars")
+                          .css("width",val*16+"px")
+                          .css("display","block")
+                        $("."+i +" .rating_lbl").text("("+val+")")
+                        }
                     else if(i == "users_points_breakup"){
                       generateGraph(val);
                     }
@@ -448,7 +488,6 @@
             global: false, 
             beforeSend: function(){
                 $("#course-notification").append("<label class='loading_lbl'>Loading...</label>");
-                
             },
             success:function(data){
                 if(String(data)) {
