--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/type_created.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/type_created.html
@@ -9,21 +9,105 @@
 <script type="text/javascript" src="/static/ndf/bower_components/mousetrap/mousetrap.js"></script>
 <script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script>
+<style type="text/css">
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 100%;
+  background: #333;
+  -webkit-font-smoothing: antialiased;
+}
+
+#page-wrapper {
+  width: 640px;
+  /*background: #FFFFFF;*/
+  padding: 1em;
+  margin: 1em auto;
+  /*border-top: 5px solid #69c773;*/
+  /*box-shadow: 0 2px 10px rgba(0,0,0,0.8);*/
+}
+
+h1 {
+  margin-top: 0;
+}
+
+label {
+  display: block;
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  color: #999999;
+}
+
+input {
+  width: 100%;
+  padding: 0.5em 0.5em;
+  font-size: 1.2em;
+  border-radius: 3px;
+  border: 1px solid #D9D9D9;
+}
+
+button {
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.5rem 0.8em;
+  background: #69c773;
+  border-bottom: 1px solid #498b50;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
+  margin: 0;
+  width: 100%;
+  text-align: center;
+}
+
+button:hover, button:focus {
+  opacity: 0.75;
+  cursor: pointer;
+}
+
+button:active {
+  opacity: 1;
+  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1) inset;
+}
+</style>
 
 <div style="display:table;  border:1px;   border-spacing:15px; " class="small-12 columns">
 <div class="row">
 <form method="post" name="" id="type_create">
 <div style="display:table-row;">
+    <!--
     <div style="display:table-cell;"> <center>
         {% trans 'Select GSystemType : ' %}</center>
     </div>
-    <div style="display:table-cell;"> 
-        <select id="widget_for" name="widget_for" class="demo-default" placeholder=" Select GST " onchange="GetSelectedTextValue(this)" >
+    <div style="display:table-cell;">
+    <section id="intro"> 
+        <select id="widget_for" name="widget_for" class="demo-default" placeholder=" Select GST " >
                 <option value="search" > </option> 
             {% for list in opt_list %}
                 <option value="{{list.name}}" size="5" > {{list.name}} </option>
             {% endfor %}
         </select>
+    </section>
+    </div>
+    -->
+
+    <div style="display:table-cell;" id="page-wrapper" >
+
+    <label for="default">Search for GST : </label>
+    <input type="text" id="default" list="widget_for" placeholder="Type to search for GST">
+    <datalist id="widget_for" name="widget_for" >
+    {% for list in opt_list %}
+        <option value="{{list.name}}" size="5" > </option>
+    {% endfor %}        
+    </datalist>    
     </div>
 </div>
 </form>
@@ -38,6 +122,33 @@
 var list = "{{list}}"
 var selectedValue = null 
 
+// Get the <datalist> elements.
+var dataList = document.getElementById('json-datalist');
+
+// Create a new XMLHttpRequest.
+var request = new XMLHttpRequest();
+
+// Handle state changes for the request.
+request.onreadystatechange = function(response) {
+  if (request.readyState === 4) {
+    if (request.status === 200) {
+      // Parse the JSON
+      var jsonOptions = JSON.parse(request.responseText);
+        // Loop over the JSON array.
+      jsonOptions.forEach(function(item) {
+        // Create a new <option> element.
+        var option = document.createElement('option');
+        // Set the value using the item in the JSON array.
+        option.value = item;
+        // console.log(option.value)
+        // Add the <option> element to the <datalist>.
+        dataList.appendChild(option);
+      });
+      
+    } 
+  }
+};
+
 function GetSelectedTextValue(widget_for) {
     var selectedText = widget_for.options[widget_for.selectedIndex].innerHTML;
     selectedValue = widget_for.value;
@@ -45,9 +156,7 @@ function GetSelectedTextValue(widget_for) {
 }
 
 function NavigateToSite(){
-    // document.location.href=document.getElementById('widget_for')
-    var selectedValue = document.getElementById('widget_for').value
-    console.log(selectedValue)
+    var selectedValue = document.getElementById('default').value
     switch(selectedValue){
         case "Page":
             selected_val = "{% url 'page_create_edit' group_name_tag %}";
